test/good/functions/args1.px

func f(Int x: 9) def
    print x

f()
f(42)
