test/bad/classes/nested01.px

func f() def
    class A def
        x: Int

f()
